Name:                dupp
Version:             0.1
Description:         a du clone with prettier output
License:             GPL
License-file:        LICENSE
Author:              Fred Dubois
Maintainer:          fred.dubois@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable dupp
  Main-is:           dupp.hs
  Build-Depends:     base >= 3,
                     directory >= 1.0.0.3,
                     filepath >= 1.1.0.2
